--- a/VISIONTOOL/CODE/style.css
+++ b/VISIONTOOL/CODE/style.css
@@ -30,6 +30,23 @@
 .lineSpace{
     margin: 20px;
 }
+.bigLineSpace{
+    margin : 100px 0px;
+}
+.big-search{
+    width: 80%;
+    margin: 0px auto;
+    background-color: gray;
+    display: flex;
+    align-items: center;
+    height: 40px;
+    justify-content: center;
+}
+
+.big-input{
+    width: 90%;
+    height: 20px;
+}
 #WebName{
     margin: 30px auto;
     font-size: 50px;
@@ -74,7 +91,35 @@
     top: 0px;
     height: 60px;
     text-align: left;
-    background-color: #ff5252;
+    background-color: #2c7be2;
+    color: white;
+    padding: 0px 30px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 2%;
+}
+#title-admin{
+    width : 20%;
+    background-color: gray;
+    height: 60px;
+    color: white;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+#admin-rightBox{
+    width: 20%;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    height: 60px;
+    text-align: left;
+    background-color: gray;
     color: white;
     padding: 0px 30px;
     box-sizing: border-box;
@@ -91,14 +136,17 @@
     font-size: 30px;
     cursor: pointer;
 }
+.cursor{
+    cursor: pointer;
+}
 #category{
     margin: 0px auto;
     width: 80%;
     color: white;
-    height: 50px;
+    height: 80px;
     display: flex;
     justify-content: space-around;
-    background-color: #ff5252;
+    background-color: #2c7be2;
     font-size: 20px;
     box-sizing: border-box;
 }
@@ -108,20 +156,33 @@
 .tool{
     align-items: center;
     width: 20%;
-    height: 50px;
+    height: 80px;
     cursor: pointer;
-    background-color: #ff5252;
+    background-color: #2c7be2;
     text-align: center;
     display: flex;
     justify-content: center;
 }
 .tool:hover{
-    background-color: #e62f2f;
+    background-color: #1d1ae4;
 }
 .userBox{
     width: 20%;
     margin: 0px auto;
     text-align: right;
+    padding: 30px;
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 10px;
+}
+.infoBox{
+    width: 50%;
+    margin: 0px auto;
+    text-align: left;
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 30px;
 }
 #container{
     width: 80%;
@@ -132,6 +193,29 @@
     margin-bottom: 50px;
     background-color: rgb(255, 248, 240);
 }
+#admin-container{
+    width: 80%;
+    margin: 50px auto;
+    padding: 30px;
+    box-sizing: border-box;
+    text-align: center;
+    margin-bottom: 50px;
+    background-color: gray;
+}
+#left_container{
+    float : left;
+    background-color: #2c7be2;
+    height: 600px;
+    width : 9%;
+    text-align: center;
+    color: white; 
+    border-radius: 5%;
+    margin-top: 50px;
+    border: 2px solid black;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: large;
+}
 #imgBox{
     width: 60%;
     height: 400px;
@@ -140,6 +224,10 @@
     display: flex;
     align-items: center;
     
+}
+.bigBox{
+    width: 500px;
+    height: 500px;
 }
 .companyMap{
     width: 30%;
@@ -157,10 +245,49 @@
    border: 1px solid black;
    cursor: pointer;
 }
+
 .detailTitle{
     margin: 50px;
     font-size: 40px;
 }
 .gray{
     color: gray;
+}
+.white{
+    color: black;
+    text-shadow: white 0px 0px 10px;
+}
+table, th, td, tr {
+    border: 2px solid black;
+    border-collapse: collapse;
+    padding: 5px 15px;
+    margin: 0px auto;
+}
+th, td{
+    width: 300px;
+    background-color: white;
+}
+#flex-container{
+    width: 80%;
+    margin: 50px auto;
+    padding: 30px;
+    box-sizing: border-box;
+    margin-bottom: 50px;
+    background-color: rgb(255, 248, 240);
+    display: grid;                                /* Grid 레이아웃을 사용합니다. */
+    grid-template-columns: repeat(4, 1fr);        /* 한 줄에 4개의 열을 만듭니다. 각 열은 동일한 비율(1fr)을 가집니다. (핵심 속성) */
+     gap: 16px;                                    /* 아이템 사이의 간격을 줍니다. */
+    border: 1px solid #eee;
+        padding: 16px;
+}
+.product-list{
+    width: 250px;
+    height: 350px;
+    border: 1px solid black;
+    box-sizing: border-box;
+    margin : 0px 50px;
+}
+.product-list img{
+    width: 248px;
+    height: 250px;
 }
