--- a/VISIONTOOL/CODE/style.css
+++ b/VISIONTOOL/CODE/style.css
@@ -191,7 +191,8 @@
     box-sizing: border-box;
     text-align: center;
     margin-bottom: 50px;
-    background-color: rgb(255, 248, 240);
+    border: 1px solid #eee;
+    /* background-color: rgb(255, 248, 240); */
 }
 #admin-container{
     width: 80%;
@@ -273,21 +274,82 @@ th, td{
     padding: 30px;
     box-sizing: border-box;
     margin-bottom: 50px;
-    background-color: rgb(255, 248, 240);
+    /* background-color: rgb(255, 248, 240); */
     display: grid;                                /* Grid 레이아웃을 사용합니다. */
     grid-template-columns: repeat(4, 1fr);        /* 한 줄에 4개의 열을 만듭니다. 각 열은 동일한 비율(1fr)을 가집니다. (핵심 속성) */
-     gap: 16px;                                    /* 아이템 사이의 간격을 줍니다. */
+    gap: 16px;                                    /* 아이템 사이의 간격을 줍니다. */
     border: 1px solid #eee;
-        padding: 16px;
+    padding: 16px;
 }
 .product-list{
     width: 250px;
-    height: 350px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     box-sizing: border-box;
     margin : 0px 50px;
+    cursor: pointer;
 }
 .product-list img{
     width: 248px;
     height: 250px;
+    border: 1px  solid black;
+    box-sizing: border-box;
+}
+.price{
+    color: #1d1ae4;
+    font-weight: bold;
+}
+
+.product-list :hover{
+    text-shadow: 0px 0px 10px rgb(175, 163, 163);
+}
+.detail-img{
+    border: 1px solid black;
+    width: 500px;
+    height: 500px;
+    display: flex;
+    justify-content: center; /* 수평 가운데 정렬 */
+    align-items: center; 
+    float: left;
+}
+.detail-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.product-name{
+    font-size: 50px;
+    margin-bottom: 50px;
+}
+.product-detail{
+    font-size: 25px;
+    margin: 20px;
+}
+.product-detail2{
+    font-size: 25px;
+    margin-top: 100px;
+}
+.product-detail2 button{
+    margin: 0px 20px;
+    width: 50px;
+    height: 35px;
+    font-size: 20px;
+    background-color: white;
+    box-shadow: 0px 0px 2px black;
+    cursor: pointer;
+}
+.cart-box{
+    /* border: 1px solid black; */
+    box-shadow: 0px 0px 5px gray;
+    text-align: left;
+    padding: 30px;
+    height: 350px;
+}
+.cart-box img{
+    width: 300px;
+    height: 300px;
+    float: left;
+}
+.check-cart{
+    width: 30px;
+    height: 30px;
 }
